--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 winapi = { version = "0.3.9", features = ["winreg", "winnt", "ntdef"] }
 serde = { version = "1", features = ["derive"] }
-toml = "0.5"
+serde_yaml = "0.8"
